# OGLRoguelike

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
resources/shaders/: debug_point.glsl  grid2d.glsl  gui.glsl  sample.glsl  sprite.glsl  text.glsl  textsdf.glsl  tilemap v2.glsl  tilemap.glsl  tilemapv3.glsl
src/: CMakeLists.txt  Common.hpp  main.cpp
src/Core/: AssetManager.cpp  AssetManager.hpp  AssetsManager.cpp  AssetsManager.hpp  Components.cpp  Components.hpp  Engine.cpp  Engine.hpp  Event.hpp  GameObject.cpp  GameObject.hpp  Log.cpp  Log.hpp  Scene.cpp  Scene.hpp  Time.cpp  Time.hpp
src/Core/Tilemaps/: Tile.cpp  Tile.hpp  Tilemap.cpp  Tilemap.hpp
src/Game/: Action.cpp  Action.hpp  Algorithms.cpp  Algorithms.hpp  AutotilesLoaders.cpp  AutotilesLoaders.hpp  Battlers.cpp  Battlers.hpp  Constants.hpp  PlayerTest.cpp  PlayerTest.hpp  TestScene.cpp  TestScene.hpp  TestScene2.cpp  Tilemap.cpp  Tilemap.hpp  TilemapTest.cpp  TilemapTest.hpp  TurnManager.cpp  TurnManager.hpp  UnitUtils.cpp  UnitUtils.hpp
src/Game/AI/: State.hpp  StateMachine.cpp  StateMachine.hpp
src/Game/AI/States/: ChaseState.cpp  ChaseState.hpp  IdleState.cpp  IdleState.hpp  WanderState.cpp  WanderState.hpp
src/Game/DungeonGen/: Dungeon.cpp  Dungeon.hpp  Fov.cpp  Fov.hpp  PermissiveFov.cpp  PermissiveFov.hpp
src/Game/Enemies/: Enemy.cpp  Enemy.hpp
src/Game/Player/: Player.cpp  Player.hpp
src/Game/Scenes/: Level.cpp  Level.hpp
src/Game/Tests/: Battlers.cpp  Battlers.hpp  PlayerTest.cpp  PlayerTest.hpp  TestScene.cpp  TestScene.hpp  TestScene2.cpp  TestScene2.hpp
src/Input/: Input.cpp  Input.hpp  InputSystem.cpp  InputSystem.hpp
src/Rendering/: Batch.cpp  Batch.hpp  Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Framebuffer.cpp  Framebuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  TilemapRenderer.cpp  TilemapRenderer.hpp  TilemapRendererSample.cpp  TilemapRendererSample.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp
src/UI/: Button.cpp  Button.hpp  Checkbox.cpp  Checkbox.hpp  Image.cpp  Image.hpp  Label.cpp  Label.hpp  Panel.cpp  Panel.hpp  Rect.cpp  Rect.hpp  ScrollView.cpp  ScrollView.hpp  Slider.cpp  Slider.hpp  UI.cpp  UI.hpp  UIStack.cpp  UIStack.hpp  Widget.cpp  Widget.hpp
src/UI/Text/: Text.hpp  TextRenderer.cpp  TextRenderer.hpp
src/Utils/: Color.cpp  Color.hpp  MathExtras.cpp  MathExtras.hpp  OGLDebug.cpp  OGLDebug.hpp  Random.cpp  Random.hpp
